fix: minor responsive horizontal scrollbar issues

--- a/frontend/src/styles/feature-photo.module.scss
+++ b/frontend/src/styles/feature-photo.module.scss
@@ -29,7 +29,7 @@
 	.position-wrap {
 		height: auto;
 		position: relative;
-		min-width: 100vw;
+		min-width: 100%;
 		// left: -33px;
 		// top: -33px;
 	}
