--- a/frontend/src/styles/globals.scss
+++ b/frontend/src/styles/globals.scss
@@ -18,6 +18,8 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	overflow-x: hidden;
+	width: 100%;
 }
 
 a,
@@ -40,7 +42,7 @@ p {
 
 @media screen and (max-width: 1020px) {
 	hr {
-		width: calc(100vw - 60px);
+		width: calc(100% - 60px);
 		margin-left: auto;
 		margin-right: auto;
 	}
